--- a/customer/app/views/cart.html
+++ b/customer/app/views/cart.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="cuahang">
             <h3>TRỞ LẠI CỬA HÀNG =></h3>
-            <a href="./index.html">
+            <a href="../../../index.html">
                 <i class="fa fa-store trove"></i>
             </a>
         </div>
